[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/character/human.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/management/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/interface/interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/management/enemy_spawner.gd" type="Script" id=4]
[ext_resource path="res://scripts/management/game_level.gd" type="Script" id=5]

[node name="GameLevel" type="Node2D"]
script = ExtResource( 5 )

[node name="Human" parent="." instance=ExtResource( 1 )]

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="WaveTimer" type="Timer" parent="EnemySpawner"]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
one_shot = true
autostart = true

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Interface" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="EnemySpawner/WaveTimer" to="EnemySpawner" method="on_wave_timer_timeout"]
[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="on_spawn_timer_timeout"]
